--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://american-desi.github.io/robotfriends",
+  "homepage": "https://american-desi.github.io/robotfriends/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
